okrLink: "A url linking to this person's Objectives & Key Results."
See: https://github.com/Financial-Times/biz-ops-schema/pull/132#issuecomment-507332370
> "Someone can add person later, for today's 10% project I'm focusing on groups & teams."

# What
URLs for Person' OKRs

# Why
It's currently really hard to find OKRs for people

--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -198,6 +198,10 @@ properties:
     description: The teams this person is a member of.
     hasMany: true
     fieldset: team
+  okrLink:
+    type: Url
+    label: OKR Link
+    description: "A url linking to this person's Objectives & Key Results."
 fieldsets:
   general:
     heading: General information
