WIP to upgrade apollo

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@financial-times/n-cluster": "^1.0.0",
     "@financial-times/n-logger": "^6.1.0",
     "@financial-times/s3o-middleware": "^3.0.1",
-    "apollo-server-express": "^1.4.0",
+    "apollo-server-express": "^2.8.1",
     "aws-sdk": "^2.504.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "body-parser": "^1.19.0",
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "graphql": "^14.4.2",
+    "graphql-playground-middleware-express": "^1.7.12",
     "graphql-server-express": "^1.4.1",
     "http-errors": "^1.7.3",
     "js-yaml": "^3.13.1",
