--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -485,6 +485,7 @@ properties:
     relationship: REPLACES
     description: System(s) that are, or will be, replaced, at least in part, by this system.
     hasMany: true
+    writeInactive: true
     fieldset: network
   replacedBy:
     type: System
