--- a/example-schema/types/Team.yaml
+++ b/example-schema/types/Team.yaml
@@ -71,46 +71,46 @@ properties:
   #   label: Preferred contact method
   #   description: How the team would like to be contacted.
   #   fieldset: general
-  # techLeads:
-  #   type: Person
-  #   direction: outgoing
-  #   label: Tech leads
-  #   relationship: HAS_TECH_LEAD
-  #   description: The individuals who drive the technical aspects of the systems owned by the team.
-  #   hasMany: true
-  #   fieldset: people
-  # productOwners:
-  #   type: Person
-  #   direction: outgoing
-  #   label: Product owners
-  #   relationship: HAS_PRODUCT_OWNER
-  #   description: The individuals who drive the business aspects of the systems owned by the team.
-  #   hasMany: true
-  #   fieldset: people
-  # deliveryManagers:
-  #   type: Person
-  #   direction: outgoing
-  #   label: Delivery Managers
-  #   relationship: HAS_DELIVERY_MANAGER
-  #   description: The individuals who are accountable for the delivery of products and services by the team.
-  #   hasMany: true
-  #   fieldset: people
-  # subTeams:
-  #   type: Team
-  #   direction: outgoing
-  #   label: Sub-teams
-  #   relationship: HAS_TEAM
-  #   showInactive: false
-  #   description: The teams that are sub-divisions of this team.
-  #   hasMany: true
-  #   fieldset: organisation
-  # parentTeam:
-  #   type: Team
-  #   direction: incoming
-  #   label: Parent team
-  #   relationship: HAS_TEAM
-  #   description: For child teams this field defines the team they are part of; otherwise blank.
-  #   fieldset: organisation
+  techLeads:
+    type: Person
+    direction: outgoing
+    label: Tech leads
+    relationship: HAS_TECH_LEAD
+    description: The individuals who drive the technical aspects of the systems owned by the team.
+    hasMany: true
+    fieldset: people
+  productOwners:
+    type: Person
+    direction: outgoing
+    label: Product owners
+    relationship: HAS_PRODUCT_OWNER
+    description: The individuals who drive the business aspects of the systems owned by the team.
+    hasMany: true
+    fieldset: people
+  deliveryManagers:
+    type: Person
+    direction: outgoing
+    label: Delivery Managers
+    relationship: HAS_DELIVERY_MANAGER
+    description: The individuals who are accountable for the delivery of products and services by the team.
+    hasMany: true
+    fieldset: people
+  subTeams:
+    type: Team
+    direction: outgoing
+    label: Sub-teams
+    relationship: HAS_TEAM
+    showInactive: false
+    description: The teams that are sub-divisions of this team.
+    hasMany: true
+    fieldset: organisation
+  parentTeam:
+    type: Team
+    direction: incoming
+    label: Parent team
+    relationship: HAS_TEAM
+    description: For child teams this field defines the team they are part of; otherwise blank.
+    fieldset: organisation
   teamMembers:
     type: Person
     direction: outgoing
