--- a/example-schema/types/Person.yaml
+++ b/example-schema/types/Person.yaml
@@ -14,94 +14,94 @@ properties:
         For third parties, please use firstname.lastname.company.
     pattern: MAX_LENGTH_64
     fieldset: general
-  # name:
-  #   type: Name
-  #   canIdentify: true
-  #   useInSummary: true
-  #   label: Name
-  #   description: |
-  #       The name by which this person is known.
-  #       For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
-  #   fieldset: general
-  # email:
-  #   type: Email
-  #   canIdentify: true
-  #   useInSummary: true
-  #   label: Email
-  #   description: |
-  #       The email address that can be used to contact this person.
-  #       For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
-  #   fieldset: contact
-  # slack:
-  #   type: Word
-  #   label: Slack
-  #   canIdentify: true
-  #   useInSummary: true
-  #   description: |
-  #       The Slack link for this person (deprecated).
-  #       For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
-  #   fieldset: contact
-  # slackName:
-  #   type: Word
-  #   canIdentify: true
-  #   label: Slack Name
-  #   description: |
-  #       The Slack name for this person.
-  #       For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
-  #   fieldset: contact
-  # slackID:
-  #   type: Word
-  #   canIdentify: true
-  #   label: Slack ID
-  #   description: |
-  #       The Slack id for this person.
-  #       For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
-  #   fieldset: contact
-  # githubName:
-  #   type: Word
-  #   canIdentify: true
-  #   label: Github Username
-  #   description: The Github user name for this person.
-  #   fieldset: contact
-  # phone:
-  #   type: Word
-  #   canIdentify: true
-  #   useInSummary: true
-  #   label: Phone
-  #   description: |
-  #       The telephone number that can be used to contact this person.
-  #       For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
-  #   fieldset: contact
-  # isPeopleApi:
-  #   type: Boolean
-  #   label: Is FT staff
-  #   fieldset: general
-  #   description: |
-  #       Whether or not this person is an FT staff member listed in https://people-finder.in.ft.com/.
-  #       Please raise in the \#ip-people-api slack channel if details are incorrect.
-  # isActive:
-  #   type: Boolean
-  #   label: Active
-  #   description: |
-  #       Whether or not this person is still working at the FT.
-  #       For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
-  #   fieldset: general
-  # contract:
-  #   type: PersonContract
-  #   label: Contract type
-  #   description: |
-  #       The type of employment contract this Person has with the FT.
-  #       For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
-  #   fieldset: general
-  # source:
-  #   type: PersonSource
-  #   label: Source
-  #   description: The primary data source used to provide information for this person - Workday, Salesforce, ldap, github, Slack or multiple.
-  # proposedId:
-  #   type: Word
-  #   label: Proposed ID
-  #   deprecationReason: Only needed during migration to new ids
-  #   description: The ID of this person in Workday, ldap, github or Slack. If no ID is found, it is `name.lastname`.
+  name:
+    type: Name
+    canIdentify: true
+    useInSummary: true
+    label: Name
+    description: |
+        The name by which this person is known.
+        For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
+    fieldset: general
+  email:
+    type: Email
+    canIdentify: true
+    useInSummary: true
+    label: Email
+    description: |
+        The email address that can be used to contact this person.
+        For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
+    fieldset: contact
+  slack:
+    type: Word
+    label: Slack
+    canIdentify: true
+    useInSummary: true
+    description: |
+        The Slack link for this person (deprecated).
+        For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
+    fieldset: contact
+  slackName:
+    type: Word
+    canIdentify: true
+    label: Slack Name
+    description: |
+        The Slack name for this person.
+        For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
+    fieldset: contact
+  slackID:
+    type: Word
+    canIdentify: true
+    label: Slack ID
+    description: |
+        The Slack id for this person.
+        For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
+    fieldset: contact
+  githubName:
+    type: Word
+    canIdentify: true
+    label: Github Username
+    description: The Github user name for this person.
+    fieldset: contact
+  phone:
+    type: Word
+    canIdentify: true
+    useInSummary: true
+    label: Phone
+    description: |
+        The telephone number that can be used to contact this person.
+        For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
+    fieldset: contact
+  isPeopleApi:
+    type: Boolean
+    label: Is FT staff
+    fieldset: general
+    description: |
+        Whether or not this person is an FT staff member listed in https://people-finder.in.ft.com/.
+        Please raise in the \#ip-people-api slack channel if details are incorrect.
+  isActive:
+    type: Boolean
+    label: Active
+    description: |
+        Whether or not this person is still working at the FT.
+        For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
+    fieldset: general
+  contract:
+    type: PersonContract
+    label: Contract type
+    description: |
+        The type of employment contract this Person has with the FT.
+        For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
+    fieldset: general
+  source:
+    type: PersonSource
+    label: Source
+    description: The primary data source used to provide information for this person - Workday, Salesforce, ldap, github, Slack or multiple.
+  proposedId:
+    type: Word
+    label: Proposed ID
+    deprecationReason: Only needed during migration to new ids
+    description: The ID of this person in Workday, ldap, github or Slack. If no ID is found, it is `name.lastname`.
   techLeadFor:
     type: Team
     label: Tech lead for teams
@@ -138,18 +138,18 @@ properties:
     description: The teams this person is a member of.
     hasMany: true
     fieldset: team
-  # okrLink:
-  #   type: Url
-  #   label: OKR Link
-  #   description: "A url linking to this person's Objectives & Key Results."
-# fieldsets:
-#   general:
-#     heading: General information
-#   contact:
-#     heading: Contact details
-#   group:
-#     heading: Group Roles
-#   team:
-#     heading: Team Roles
-#   individual:
-#     heading: Individual Roles
+  okrLink:
+    type: Url
+    label: OKR Link
+    description: "A url linking to this person's Objectives & Key Results."
+fieldsets:
+  general:
+    heading: General information
+  contact:
+    heading: Contact details
+  group:
+    heading: Group Roles
+  team:
+    heading: Team Roles
+  individual:
+    heading: Individual Roles
