--- a/example-schema/types/Person.yaml
+++ b/example-schema/types/Person.yaml
@@ -153,51 +153,51 @@ properties:
     description: The team(s) whose delivery this person is accountable for.
     hasMany: true
     fieldset: team
-  # ownedProducts:
-  #   type: Product
-  #   direction: incoming
-  #   label: Product owner for products
-  #   relationship: HAS_PRODUCT_OWNER
-  #   showInactive: false
-  #   description: The product(s) this person is a Product Owner for.
-  #   hasMany: true
-  #   fieldset: individual
-  # dataOwnerFor:
-  #   type: System
-  #   direction: incoming
-  #   label: GDPR Data owner for systems
-  #   relationship: HAS_DATA_OWNER
-  #   showInactive: false
-  #   description: The systems where this person is responsible for managing GDPR processes related to personal data.
-  #   hasMany: true
-  #   fieldset: individual
-  # technicalOwnerFor:
-  #   type: System
-  #   direction: incoming
-  #   label: Technical owner for systems
-  #   relationship: HAS_TECHNICAL_OWNER
-  #   showInactive: false
-  #   description: The systems this person has technical responsibility for.
-  #   hasMany: true
-  #   fieldset: individual
-  # stakeholderFor:
-  #   type: System
-  #   direction: incoming
-  #   label: Stakeholder for systems
-  #   relationship: HAS_STAKEHOLDER
-  #   showInactive: false
-  #   description: The systems this person is a stakeholder for.
-  #   hasMany: true
-  #   fieldset: individual
-  # knowsAbout:
-  #   type: System
-  #   direction: incoming
-  #   label: Knows about systems
-  #   relationship: KNOWN_ABOUT_BY
-  #   showInactive: false
-  #   description: The systems this person knows about.
-  #   hasMany: true
-  #   fieldset: individual
+  ownedProducts:
+    type: Product
+    direction: incoming
+    label: Product owner for products
+    relationship: HAS_PRODUCT_OWNER
+    showInactive: false
+    description: The product(s) this person is a Product Owner for.
+    hasMany: true
+    fieldset: individual
+  dataOwnerFor:
+    type: System
+    direction: incoming
+    label: GDPR Data owner for systems
+    relationship: HAS_DATA_OWNER
+    showInactive: false
+    description: The systems where this person is responsible for managing GDPR processes related to personal data.
+    hasMany: true
+    fieldset: individual
+  technicalOwnerFor:
+    type: System
+    direction: incoming
+    label: Technical owner for systems
+    relationship: HAS_TECHNICAL_OWNER
+    showInactive: false
+    description: The systems this person has technical responsibility for.
+    hasMany: true
+    fieldset: individual
+  stakeholderFor:
+    type: System
+    direction: incoming
+    label: Stakeholder for systems
+    relationship: HAS_STAKEHOLDER
+    showInactive: false
+    description: The systems this person is a stakeholder for.
+    hasMany: true
+    fieldset: individual
+  knowsAbout:
+    type: System
+    direction: incoming
+    label: Knows about systems
+    relationship: KNOWN_ABOUT_BY
+    showInactive: false
+    description: The systems this person knows about.
+    hasMany: true
+    fieldset: individual
   teams:
     type: Team
     direction: incoming
