--- a/example-schema/types/Group.yaml
+++ b/example-schema/types/Group.yaml
@@ -69,15 +69,15 @@ properties:
       groups that are too small to have a hierarchical structure, this may
       list all the groups teams.
     hasMany: true
-  # allTeams:
-  #   type: Team
-  #   label: All teams
-  #   direction: outgoing
-  #   relationship: HAS_TEAM
-  #   showInactive: false
-  #   description: |
-  #     All the teams that are part of this group. This is populated by traversing
-  #     the team hierarchy in the group and the list does not need to be manually
-  #     maintained.
-  #   hasMany: true
-  #   isRecursive: true
+  allTeams:
+    type: Team
+    label: All teams
+    direction: outgoing
+    relationship: HAS_TEAM
+    showInactive: false
+    description: |
+      All the teams that are part of this group. This is populated by traversing
+      the team hierarchy in the group and the list does not need to be manually
+      maintained.
+    hasMany: true
+    isRecursive: true
