property added to TeamHasTechLeadPerson

--- a/example-schema/types/Person.yaml
+++ b/example-schema/types/Person.yaml
@@ -135,6 +135,7 @@ properties:
     showInactive: false
     hasMany: true
     fieldset: team
+    relationshipProp: String
   ownedTeams:
     type: Team
     direction: incoming
