--- a/example-schema/type-hierarchy.yaml
+++ b/example-schema/type-hierarchy.yaml
@@ -2,7 +2,7 @@ test:
   label: Test
   description: Test types
   types:
-    - RootType
+    - MainType
     - ParentType
     - ChildType
 business:
