--- a/example-schema/types/ChildType.yaml
+++ b/example-schema/types/ChildType.yaml
@@ -12,14 +12,14 @@ properties:
     label: Code label
   isChildOf:
     relationship: HAS_CHILD
-    type: RootType
+    type: MainType
     description: Is child of description.
     label: Is child of label
     direction: incoming
     hasMany: true
   isFavouriteChildOf:
     relationship: HAS_FAVOURITE_CHILD
-    type: RootType
+    type: MainType
     description: Is favourite child of description.
     label: Is favourite child of label
     direction: incoming
