graphql tests use new types

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -26,6 +26,10 @@ properties:
     type: Boolean
     description: Boolean description.
     label: Boolean label
+  someEnum:
+    type: SystemLifecycle
+    description: Enum description.
+    label: Enum label
   anotherString:
     type: Word
     description: Word description.
