--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -10,6 +10,13 @@ properties:
     description: Code description.
     label: Code label
     pattern: CODE
+  otherCode:
+    type: Code
+    unique: true
+    canIdentify: true
+    description: Other code description.
+    label: Other code label
+    pattern: CODE
   someDocument:
     type: Document
     description: Document description.
